<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_my_series">

    <fragment
        android:id="@+id/navigation_my_series"
        android:name="com.davito.misseriesapp.ui.misseries.MisSeriesFragment"
        android:label="@string/title_my_series"
        tools:layout="@layout/fragment_my_series" >
        <action
            android:id="@+id/action_navigation_my_series_to_newSerieFragment"
            app:destination="@id/newSerieFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_series"
        android:name="com.davito.misseriesapp.ui.series.SeriesFragment"
        android:label="@string/title_series"
        tools:layout="@layout/fragment_series" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.davito.misseriesapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/newSerieFragment"
        android:name="com.davito.misseriesapp.ui.newserie.NewSerieFragment"
        android:label="fragment_new_serie"
        tools:layout="@layout/fragment_new_serie" />
</navigation>